--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Setto i vaolri delle costanti come nell'articolo di Miconi e inizializzo le matrici ai valori iniziali"
+    "Setto i valori delle costanti come nell'articolo di Miconi e inizializzo le matrici ai valori iniziali"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
