--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -174,6 +174,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### noise\n",
+    "\n",
+    "noise= np.zeros((N,totime))\n",
+    "rate=3./1000\n",
+    "\n",
+    "'''\n",
+    "for each neuron:\n",
+    "     for each time:\n",
+    "         extract random number r1 between 0 and 1\n",
+    "         if(r1<rate):\n",
+    "             noise=extrract rando mfrom -0.5 to 0.5\n",
+    "'''             "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
